Use dark Bootswatch theme

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blockchain simplifiée</title>
-    <!-- Thème Bootswatch pour un rendu plus soigné -->
+    <!-- Thème Bootswatch foncé pour un rendu adapté à l'univers blockchain -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/lux/bootstrap.min.css"
-      integrity="sha384-w72HNGOyvkvz5sxYf0xz3eoY7uhfFUx5PncQt4pgt3wGjluWo36v9anptXH0e9Bc"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/cyborg/bootstrap.min.css"
+      integrity="sha384-5z6b6vWn64DuHV/qIir+OiyvnN6w4lItEXoyfJqXK0mwgRwlOx2Q/UXxV2LNlFdi"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
